--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>About what??</title>
+    <title>About what?? I don't know.</title>
   </head>
   <body>
 
